--- a/gb_app/pom.xml
+++ b/gb_app/pom.xml
@@ -27,6 +27,14 @@
     </dependency>
   </dependencies>
 
+  <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+  <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>33.0.0-jre</version>
+  </dependency>
+
+
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
